docs: kakao api modify and kakaoLoginBtn add

--- a/web/index.html
+++ b/web/index.html
@@ -6,10 +6,10 @@
     <title>OAuth Authorization</title>
 </head>
 <body>
-    <img src="img/kakaoLoginBtn.png" id="authorizeBtn">
+    <img src="src/img/kakaoLoginBtn.png" id="authorizeBtn">
    
     <script>
-        const REST_API_KEY = 'e01c00f263b58f3ca766604298a63b8a';
+        const REST_API_KEY = '047f9409d2369cfb8f5e8afa41b2d9eb';
         const REDIRECT_URI = 'http://localhost:22250/callback';
 
         document.getElementById('authorizeBtn').addEventListener('click', function() {
