[feat] add func GetUserInfo

--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
    
     <script>
         const REST_API_KEY = '047f9409d2369cfb8f5e8afa41b2d9eb';
-        const REDIRECT_URI = 'http://localhost:22250/callback';
+        const REDIRECT_URI = 'http://localhost:22250/login/callback';
 
         document.getElementById('authorizeBtn').addEventListener('click', function() {
             const url = `https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=${REST_API_KEY}&redirect_uri=${REDIRECT_URI}`;
